previous version and then become release candidates for the next one.
If it all goes as planned, this will give people at least 1/4 year to
update their programs.


0.1205 2001.??.??
-----------------

Added TRACE_RESULTS to lib/TestSetup.  One of the tests in 0.1204 hung
on a user's machine, and it was impossible to figure it out remotely
without first seeing which test hung.


0.1204 2001.01.13
-----------------

Fletch pointed out that SunOS has a psrinfo command to describe a
Sparc's processors.  Excellent!  Updated the README.

Added IO::Pty support to Wheel::Run.  Skip the Pty tests if IO::Pty
isn't available, so's not to break testing for people without it.

Torvald Riegel pointed out that POE::NFA's goto_state() method
required an entry event.  The documentation says it's not mandatory,
so I added his patch to make it optional.

Added a STATE parameter to POE::NFA event handlers.  STATE contains
the name of the machine's current state.

Added a get_current_state() method to POE::NFA.  It returns the
machine's current state's name.

Added t/23_nfa.t to exercise bits of POE::NFA.

Added code to prevent session IDs from colliding after integer
increment wraps.

Devolped a depreciation schedule for some iffy current features and to
make the names of things more consistent.

Added TRACE_RETURNS and ASSERT_RETURNS to generate warnings and/or
hard errors whenever a Kernel function will return an error.

Updated POE::Session's postback() documentation based on user
feedback.  Thanks again to Rob Bloodgood.

Rob Bloodgood sent in a patch for POE::Component::Server::TCP to let
it bind to specific interface addresses.  The default behavior is the
same as before: bind to INADDR_ANY.


0.1203 2000.12.29
-----------------

Very minor optimization to Gtk read/write resuming.  Replace Gtk's
noisy warning about resuming unpaused handles with quiet acceptance.

Added POE::Pipe::OneWay, a portable way to create one-way pipes.  It