@@ -137,6 +137,7 @@ Perl    : v5.6.0
 Gtk     : (not installed)
 Tk      : (not installed)
 Event   : (not installed)
+IO::Pty : 0.01
 
 All tests successful, 4 tests and 5 subtests skipped.
 Files=24, Tests=429, 158 wallclock secs ( 0.00 cusr +  0.00 csys =  0.00 CPU)
@@ -149,6 +150,7 @@ Perl    : v5.6.0
 Gtk     : 0.7004
 Tk      : 800.021
 Event   : 0.79
+IO::Pty : 0.01
 
 All tests successful.
 Files=24, Tests=454, 685 wallclock secs (423.57 cusr + 40.40 csys = 463.97 CPU)
@@ -161,18 +163,20 @@ Perl    : v5.6.0
 Gtk     : (not installed)
 Tk      : (not installed)
 Event   : 0.79
+IO::Pty : 0.01
 
 All tests successful, 2 tests and 3 subtests skipped.
 Files=24, Tests=438, 105 wallclock secs (21.54 cusr +  0.68 csys = 22.22 CPU)
 
 ** POE 0.1203 on Solaris/SunOS 5.7
 
-Hardware: SPARCstation-20; dual Sparc-75; 320MB RAM (hfb>
+Hardware: SPARCstation-20; dual Sparc-75; 320MB RAM (hfb)
 System  : SunOS 5.7
 Perl    : 5.005_03
 Gtk     : (not installed)
 Tk      : (not installed)
 Event   : (not installed)
+IO::Pty : 0.01
 
 All tests successful, 4 tests skipped, plus 3 subtests skipped.
 Files=24,  Tests=429, 120 wallclock secs (60.55 cusr +  5.33 csys = 65.88 CPU)
